hard-gists/9e30b2f908e801da1bd789f4ce3e7aac/run.log
=== Docker Run Log for 9e30b2f908e801da1bd789f4ce3e7aac ===
Started at: Mi 29. Okt 18:42:00 CET 2025

[2025-10-29 18:42:01] START: Running container for 9e30b2f908e801da1bd789f4ce3e7aac
[2025-10-29 18:42:01] SUCCESS: Container ae9880994912c4423312a623b83e4ac92eebbc00dbddab041bda2dd5a00368b7 started for 9e30b2f908e801da1bd789f4ce3e7aac
=== Container logs for 9e30b2f908e801da1bd789f4ce3e7aac ===
  File "/snippet.py", line 143
    print 'epoch', e, 'loss', np.mean(errs), 'acc', acc
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9e30b2f908e801da1bd789f4ce3e7aac ===
[2025-10-29 18:42:03] INFO: Container ae9880994912c4423312a623b83e4ac92eebbc00dbddab041bda2dd5a00368b7 has stopped
